# XentrinoBot-ROS2

./: CMakeLists.txt  README.md
launch/: imu.launch.py  lidar.launch.py  motor_controller.launch.py  odometer.launch.py  robot_control.launch.py  robot_description.launch.py
rviz/: robot.rviz
src/: robot_control.cpp
urdf/: robot.urdf
